# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.github/workflows/: general.yml  tests.yml
config/: base.yaml
migrations/: 20221022180705_create_subscriptions_table.sql  20230506172814_fill_in_null_statuses.sql  20230506181012_create_subscriptions_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
