[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jaime Liz<admin@applogi.co>"]
edition = "2021"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }


[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
