[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jaime Liz<admin@applogi.co>"]
edition = "2021"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.4"
serde-aux = "3"
unicode-segmentation = "1"
claim = "0.5"


[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
claim = "0.5"
claims = "0.7.1"
once_cell = "1.17.1"
